testsuite/tests/prep/errors/if_dollar.ads
package If_Dollar is
# if $foo'Defined then
   I : Integer;
# end if;
end If_Dollar;
